--- a/RxDialogPattern/app/src/main/res/layout/activity_main.xml
+++ b/RxDialogPattern/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
   >
 
-  <RelativeLayout
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
@@ -29,7 +30,7 @@
         android:onClick="onClick"
         />
 
-  </RelativeLayout>
+  </LinearLayout>
 
 
 </layout>
